# TEXT-2-SQL-CHATBOT

./: .gitignore  Dockerfile  README.md  app.py  backend_app.py  csv_to_sqlite.py  main.py  pyproject.toml  requirements.txt  system_prompt.py
